fix(highlights): Fix vertical text cropping & layout in individual items (#1546)
* chore(highlights): Add Spotlight story with overflowing title
* fix(highlights): Force spotlight-text line-height to 18px
* fix(highlights): Bump spotlight-text-height to 90px so we get 5 lines, not 4.7
* fix(highlights): Adjust top padding + var names
* fix(highlights): Update and rename feedName logic to provider-name

--- a/content-src/components/Spotlight/Spotlight.scss
+++ b/content-src/components/Spotlight/Spotlight.scss
@@ -48,6 +48,7 @@
   > a {
     display: block;
     color: inherit;
+    height: 100%;
   }
 
   .spotlight-image {
@@ -71,16 +72,14 @@
     top: $spotlight-icon-gutter;
   }
 
-  .spotlight-feedname {
+  .spotlight-provider-name {
     color: $mid-light-grey;
-    line-height: 1.8;
     font-size: 10px;
   }
 
   .spotlight-title {
     margin: 0 0 $spotlight-title-margin-bottom;
     font-size: inherit;
-    line-height: 1.3;
     word-wrap: break-word;
   }
 
@@ -89,12 +88,16 @@
   }
 
   .spotlight-info {
-    padding: $spotlight-padding;
+    padding: $spotlight-info-top-padding $spotlight-info-default-padding;
   }
 
   .spotlight-text {
     max-height: $spotlight-text-height;
     overflow: hidden;
+
+    // absolute units because this is inherited to lines with smaller font
+    // heights that are still visually compatible with this
+    line-height: 18px;
   }
 
   .spotlight-description {
